[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/MonsterFriendFore - Opstions.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/interface/transicao_foda.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interface/menu.gd" type="Script" id=3]
[ext_resource path="res://assets/art/interface/menu/menu_screen.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_bottom = 9
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=23]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.815686, 0.152941, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 6 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.482353, 0.682353, 0.623529, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="Menu" type="Control"]
script = ExtResource( 3 )

[node name="MenuScreen" type="Sprite" parent="."]
position = Vector2( 402, 299 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 272.0
margin_bottom = 216.0
focus_neighbour_top = NodePath("btn_options")
size_flags_vertical = 3
theme = SubResource( 23 )
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="btn_start" type="Button" parent="menu"]
margin_right = 258.0
margin_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
focus_neighbour_top = NodePath("../btn_sair")
focus_neighbour_bottom = NodePath("../btn_load")
focus_mode = 1
theme = SubResource( 3 )
custom_colors/font_color_focus = Color( 0.713726, 0.811765, 0.482353, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 9 )
action_mode = 0
enabled_focus_mode = 1
text = "Jogar"
flat = true
icon_align = 1

[node name="btn_load" type="Button" parent="menu"]
margin_top = 49.0
margin_right = 258.0
margin_bottom = 94.0
focus_neighbour_top = NodePath("../btn_start")
focus_neighbour_bottom = NodePath("../btn_options")
theme = SubResource( 3 )
custom_colors/font_color_focus = Color( 0.611765, 0.752941, 0.517647, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 22 )
text = "Carregar"
flat = true
icon_align = 1

[node name="btn_options" type="Button" parent="menu"]
margin_top = 98.0
margin_right = 258.0
margin_bottom = 143.0
focus_neighbour_top = NodePath("../btn_load")
focus_neighbour_bottom = NodePath("../btn_sair")
theme = SubResource( 3 )
custom_colors/font_color_focus = Color( 0.482353, 0.682353, 0.623529, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 19 )
text = "opcoes"
flat = true
icon_align = 1

[node name="btn_sair" type="Button" parent="menu"]
margin_top = 147.0
margin_right = 258.0
margin_bottom = 192.0
focus_neighbour_top = NodePath("../btn_options")
focus_neighbour_bottom = NodePath("../btn_start")
theme = SubResource( 3 )
custom_colors/font_color_focus = Color( 0.835294, 0.305882, 0.788235, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 19 )
text = "Sair"
flat = true
icon_align = 1

[node name="transicao_foda" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="focus_entered" from="menu/btn_start" to="." method="_on_btn_start_focus_entered"]
[connection signal="focus_exited" from="menu/btn_start" to="." method="_on_btn_start_focus_exited"]
[connection signal="pressed" from="menu/btn_load" to="." method="_on_btn_load_pressed"]
[connection signal="focus_entered" from="menu/btn_options" to="." method="_on_btn_options_focus_entered"]
[connection signal="focus_exited" from="menu/btn_options" to="." method="_on_btn_options_focus_exited"]
[connection signal="focus_entered" from="menu/btn_sair" to="." method="_on_btn_sair_focus_entered"]
[connection signal="focus_exited" from="menu/btn_sair" to="." method="_on_btn_sair_focus_exited"]
